fix text in forms being blurred by blur filter

--- a/public/styles.css
+++ b/public/styles.css
@@ -97,6 +97,7 @@ body {
 
 #blur-filter { /* for wallpapers */
 	position: fixed;
+	z-index: 0;
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -225,6 +226,7 @@ main {
 	align-items: center;
 	justify-content: center;
 	text-align: center;
+	z-index: 1;
 }
 
 form {
